--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -23,6 +23,9 @@ jobs:
     - name: Grant execute permission for gradlew
       run: chmod +x gradlew
     - name: Build with Gradle
-      run: ./gradlew build
+      run:
+          command: |
+                ./gradlew build
+                ./gradlew jacocoTestReport
     - name: Code Coverage
       run: bash <(curl -s https://codecov.io/bash)
