--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -23,9 +23,8 @@ jobs:
     - name: Grant execute permission for gradlew
       run: chmod +x gradlew
     - name: Build with Gradle
-      run:
-          command: |
-                ./gradlew build
-                ./gradlew jacocoTestReport
+      run: ./gradlew build
+    - name: JacocoReport
+      run: ./gradlew jacocoTestReport
     - name: Code Coverage
       run: bash <(curl -s https://codecov.io/bash)
